--- a/pinot-plugins/pinot-environment/pinot-azure/pom.xml
+++ b/pinot-plugins/pinot-environment/pinot-azure/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>pinot-environment</artifactId>
     <groupId>org.apache.pinot</groupId>
-    <version>0.12.1</version>
+    <version>0.12.2-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>pinot-azure</artifactId>
