--- a/pinot-query-planner/pom.xml
+++ b/pinot-query-planner/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>pinot</artifactId>
     <groupId>org.apache.pinot</groupId>
-    <version>0.12.1</version>
+    <version>0.12.2-SNAPSHOT</version>
   </parent>
   <artifactId>pinot-query-planner</artifactId>
   <name>Pinot Query Planner</name>
