--- a/pinot-plugins/pinot-segment-writer/pom.xml
+++ b/pinot-plugins/pinot-segment-writer/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>pinot-plugins</artifactId>
     <groupId>org.apache.pinot</groupId>
-    <version>1.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>pinot-segment-writer</artifactId>
