--- a/pinot-segment-local/pom.xml
+++ b/pinot-segment-local/pom.xml
@@ -95,6 +95,11 @@
       <artifactId>datasketches-java</artifactId>
     </dependency>
     <dependency>
+      <groupId>net.openhft</groupId>
+      <artifactId>chronicle-map</artifactId>
+      <version>3.20.84</version>
+    </dependency>
+    <dependency>
       <groupId>com.tdunning</groupId>
       <artifactId>t-digest</artifactId>
     </dependency>
