Get build working

--- a/pinot-segment-local/pom.xml
+++ b/pinot-segment-local/pom.xml
@@ -103,6 +103,14 @@
         <groupId>net.openhft</groupId>
         <artifactId>chronicle-bytes</artifactId>
       </exclusion>
+        <exclusion>
+          <groupId>org.codehaus.jettison</groupId>
+          <artifactId>jettison</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
