Leverage ONLINE-OFFLINE state model for realtime tables

--- a/pinot-tools/src/main/resources/examples/stream/airlineStats/airlineStats_realtime_table_config.json
+++ b/pinot-tools/src/main/resources/examples/stream/airlineStats/airlineStats_realtime_table_config.json
@@ -3,6 +3,9 @@
   "tableType": "REALTIME",
   "tenants": {},
   "segmentsConfig": {
+    "completionConfig": {
+      "completionMode": "DOWNLOAD"
+    },
     "timeColumnName": "DaysSinceEpoch",
     "retentionTimeUnit": "DAYS",
     "retentionTimeValue": "5",
