--- a/pinot-plugins/pinot-minion-tasks/pom.xml
+++ b/pinot-plugins/pinot-minion-tasks/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>pinot-plugins</artifactId>
     <groupId>org.apache.pinot</groupId>
-    <version>1.2.0</version>
+    <version>1.3.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>pinot-minion-tasks</artifactId>
